--- a/index.html
+++ b/index.html
@@ -5,240 +5,163 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Sheldon Global — IT Consulting. Architecture, integration, data, and automation." />
   <title>Sheldon Global | IT Consulting</title>
-  <style>
-    :root {
-      --bg: #0b1220;
-      --card: rgba(255,255,255,.06);
-      --border: rgba(255,255,255,.12);
-      --text: rgba(255,255,255,.92);
-      --muted: rgba(255,255,255,.68);
-      --accent: #ff6500;
-      --accent2: #5ce1d4;
-      --shadow: 0 20px 60px rgba(0,0,0,.35);
-      --radius: 18px;
-      --max: 1100px;
-      --font: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-    }
 
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: var(--font);
-      color: var(--text);
+  <style>
+    :root{
+      --bg:#0b1220;
+      --card:rgba(255,255,255,.06);
+      --border:rgba(255,255,255,.12);
+      --text:rgba(255,255,255,.92);
+      --muted:rgba(255,255,255,.68);
+      --accent:#ff6500;
+      --accent2:#5ce1d4;
+      --shadow:0 20px 60px rgba(0,0,0,.35);
+      --radius:18px;
+      --max:1100px;
+      --font:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+    }
+    *{box-sizing:border-box;}
+    body{
+      margin:0;
+      font-family:var(--font);
+      color:var(--text);
       background:
         radial-gradient(900px 500px at 15% 15%, rgba(255,101,0,.20), transparent 60%),
         radial-gradient(900px 500px at 85% 25%, rgba(92,225,212,.18), transparent 60%),
         radial-gradient(700px 500px at 60% 90%, rgba(255,255,255,.06), transparent 55%),
         var(--bg);
-      min-height: 100vh;
-      overflow-x: hidden;
+      min-height:100vh;
+      overflow-x:hidden;
+    }
+    a{color:inherit;text-decoration:none;}
+    .wrap{max-width:var(--max);margin:0 auto;padding:26px 18px 80px;}
+
+    header{
+      display:flex;align-items:center;justify-content:space-between;
+      gap:14px;padding:10px 6px 22px;
     }
 
-    a { color: inherit; text-decoration: none; }
-    .wrap { max-width: var(--max); margin: 0 auto; padding: 26px 18px 80px; }
+    .brand{display:flex;align-items:center;gap:12px;min-width:260px;}
+    .logo-img{
+      width:42px;height:42px;border-radius:12px;object-fit:cover;
+      box-shadow:0 10px 30px rgba(0,0,0,.35);
+      border:1px solid rgba(255,255,255,.16);
+      background:rgba(0,0,0,.18);
+    }
+    .brand h1{font-size:16px;margin:0;letter-spacing:.5px;}
+    .brand p{margin:0;font-size:12px;color:var(--muted);}
 
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 14px;
-      padding: 10px 6px 22px;
+    nav{
+      display:flex;align-items:center;gap:10px;flex-wrap:wrap;justify-content:flex-end;
     }
+    nav a{
+      font-size:13px;color:var(--muted);
+      padding:8px 10px;border-radius:10px;
+    }
+    nav a:hover{color:var(--text);background:rgba(255,255,255,.06);}
 
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-    .logo {
-      width: 40px; height: 40px;
-      border-radius: 12px;
-      background:
-        linear-gradient(135deg, rgba(255,101,0,.95), rgba(92,225,212,.85));
-      box-shadow: 0 10px 30px rgba(0,0,0,.35);
-      position: relative;
-      overflow: hidden;
-    }
-    .logo:after{
-      content:"";
-      position:absolute; inset:-40px;
-      background: radial-gradient(circle at 30% 30%, rgba(255,255,255,.55), transparent 45%);
-      transform: rotate(18deg);
-    }
-    .brand h1 {
-      font-size: 16px;
-      margin: 0;
-      letter-spacing: .5px;
-    }
-    .brand p {
-      margin: 0;
-      font-size: 12px;
-      color: var(--muted);
+    .hero{
+      display:grid;grid-template-columns:1.15fr .85fr;
+      gap:18px;align-items:stretch;margin-top:6px;
     }
 
-    nav {
-      display: flex;
-      align-items: center;
-      gap: 14px;
-      flex-wrap: wrap;
-      justify-content: flex-end;
-    }
-    nav a {
-      font-size: 13px;
-      color: var(--muted);
-      padding: 8px 10px;
-      border-radius: 10px;
-    }
-    nav a:hover {
-      color: var(--text);
-      background: rgba(255,255,255,.06);
+    .panel{
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:22px;
+      backdrop-filter:blur(10px);
     }
 
-    .hero {
-      display: grid;
-      grid-template-columns: 1.15fr .85fr;
-      gap: 18px;
-      align-items: stretch;
-      margin-top: 6px;
+    .kicker{
+      display:inline-flex;gap:10px;align-items:center;
+      font-size:12px;color:var(--muted);
+      border:1px solid var(--border);
+      border-radius:999px;
+      padding:6px 12px;
+      background:rgba(0,0,0,.15);
+    }
+    .dot{
+      width:8px;height:8px;border-radius:999px;
+      background:var(--accent2);
+      box-shadow:0 0 0 4px rgba(92,225,212,.15);
     }
 
-    .panel {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 22px;
-      backdrop-filter: blur(10px);
+    .hero h2{
+      margin:14px 0 10px;
+      font-size:36px;line-height:1.1;letter-spacing:-.6px;
+    }
+    .hero p{
+      margin:0 0 18px;
+      color:var(--muted);
+      font-size:15px;line-height:1.6;
     }
 
-    .kicker {
-      display: inline-flex;
-      gap: 10px;
-      align-items: center;
-      font-size: 12px;
-      color: var(--muted);
-      border: 1px solid var(--border);
-      border-radius: 999px;
-      padding: 6px 12px;
-      background: rgba(0,0,0,.15);
+    .cta-row{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px;}
+    .btn{
+      display:inline-flex;align-items:center;justify-content:center;gap:10px;
+      padding:11px 14px;border-radius:12px;font-size:14px;
+      border:1px solid var(--border);
+      background:rgba(255,255,255,.06);
+      color:var(--text);
+      cursor:pointer;
+      user-select:none;
     }
-    .dot {
-      width: 8px; height: 8px; border-radius: 999px;
-      background: var(--accent2);
-      box-shadow: 0 0 0 4px rgba(92,225,212,.15);
+    .btn.primary{
+      border-color:rgba(255,101,0,.45);
+      background:linear-gradient(135deg, rgba(255,101,0,.95), rgba(255,101,0,.55));
+      box-shadow:0 12px 40px rgba(255,101,0,.12);
+    }
+    .btn:hover{filter:brightness(1.05);}
+
+    .grid{
+      display:grid;grid-template-columns:repeat(3,1fr);
+      gap:14px;margin-top:16px;
+    }
+    .tile{
+      padding:16px;border-radius:16px;border:1px solid var(--border);
+      background:rgba(0,0,0,.12);
+      min-height:106px;
+    }
+    .tile h3{margin:0 0 6px;font-size:14px;}
+    .tile p{margin:0;font-size:13px;color:var(--muted);line-height:1.5;}
+
+    .side h3{margin:0 0 6px;font-size:14px;color:var(--muted);}
+    .side .big{font-size:20px;margin:0 0 12px;line-height:1.25;}
+
+    .list{display:grid;gap:10px;margin-top:14px;}
+    .item{
+      display:flex;gap:12px;padding:12px;border-radius:14px;
+      border:1px solid var(--border);background:rgba(0,0,0,.12);
+    }
+    .badge{
+      width:34px;height:34px;border-radius:12px;
+      display:grid;place-items:center;
+      background:rgba(92,225,212,.14);
+      border:1px solid rgba(92,225,212,.24);
+      flex:0 0 auto;font-size:16px;
+    }
+    .item .t strong{display:block;font-size:13px;margin-bottom:2px;}
+    .item .t span{display:block;color:var(--muted);font-size:12px;line-height:1.45;}
+
+    .small{
+      color:var(--muted);font-size:12px;margin-top:10px;
+      border-top:1px solid rgba(255,255,255,.10);
+      padding-top:12px;
     }
 
-    .hero h2 {
-      margin: 14px 0 10px;
-      font-size: 36px;
-      line-height: 1.1;
-      letter-spacing: -0.6px;
-    }
-    .hero p {
-      margin: 0 0 18px;
-      color: var(--muted);
-      font-size: 15px;
-      line-height: 1.6;
+    footer{
+      margin-top:26px;
+      display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap;
+      color:var(--muted);font-size:12px;padding:0 6px;
     }
 
-    .cta-row {
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      margin-top: 14px;
-    }
-    .btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      padding: 11px 14px;
-      border-radius: 12px;
-      font-size: 14px;
-      border: 1px solid var(--border);
-      background: rgba(255,255,255,.06);
-      color: var(--text);
-      cursor: pointer;
-      user-select: none;
-    }
-    .btn.primary {
-      border-color: rgba(255,101,0,.45);
-      background: linear-gradient(135deg, rgba(255,101,0,.95), rgba(255,101,0,.55));
-      box-shadow: 0 12px 40px rgba(255,101,0,.12);
-    }
-    .btn:hover { filter: brightness(1.05); }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 14px;
-      margin-top: 16px;
-    }
-    .tile {
-      padding: 16px;
-      border-radius: 16px;
-      border: 1px solid var(--border);
-      background: rgba(0,0,0,.12);
-      min-height: 106px;
-    }
-    .tile h3 { margin: 0 0 6px; font-size: 14px; }
-    .tile p { margin: 0; font-size: 13px; color: var(--muted); line-height: 1.5; }
-
-    .side h3 { margin: 0 0 6px; font-size: 14px; color: var(--muted); }
-    .side .big {
-      font-size: 20px;
-      margin: 0 0 12px;
-      line-height: 1.25;
-    }
-
-    .list {
-      display: grid;
-      gap: 10px;
-      margin-top: 14px;
-    }
-    .item {
-      display: flex;
-      gap: 12px;
-      padding: 12px 12px;
-      border-radius: 14px;
-      border: 1px solid var(--border);
-      background: rgba(0,0,0,.12);
-    }
-    .badge {
-      width: 34px; height: 34px;
-      border-radius: 12px;
-      display: grid; place-items: center;
-      background: rgba(92,225,212,.14);
-      border: 1px solid rgba(92,225,212,.24);
-      flex: 0 0 auto;
-      font-size: 16px;
-    }
-    .item strong { display: block; font-size: 13px; margin-bottom: 2px; }
-    .item span { display: block; color: var(--muted); font-size: 12px; line-height: 1.45; }
-
-    footer {
-      margin-top: 26px;
-      display: flex;
-      justify-content: space-between;
-      gap: 12px;
-      flex-wrap: wrap;
-      color: var(--muted);
-      font-size: 12px;
-      padding: 0 6px;
-    }
-
-    .small {
-      color: var(--muted);
-      font-size: 12px;
-      margin-top: 10px;
-      border-top: 1px solid rgba(255,255,255,.10);
-      padding-top: 12px;
-    }
-
-    @media (max-width: 900px) {
-      .hero { grid-template-columns: 1fr; }
-      .grid { grid-template-columns: 1fr; }
-      .hero h2 { font-size: 30px; }
+    @media (max-width:900px){
+      .hero{grid-template-columns:1fr;}
+      .grid{grid-template-columns:1fr;}
+      .hero h2{font-size:30px;}
+      .brand{min-width:0;}
     }
   </style>
 </head>
@@ -247,7 +170,7 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
+        <img class="logo-img" src="assets/logo.png" alt="Sheldon Global logo" />
         <div>
           <h1>Sheldon Global</h1>
           <p>IT Consulting • Architecture • Integration</p>
@@ -257,6 +180,7 @@
       <nav>
         <a href="#services">Services</a>
         <a href="#approach">Approach</a>
+        <a href="lab.html">Lab</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -283,7 +207,7 @@
           </div>
           <div class="tile">
             <h3>Integration & Interfaces</h3>
-            <p>APIs, messaging, HL7/FHIR-style workflows, and cleaner handoffs between systems.</p>
+            <p>APIs, messaging, and cleaner handoffs between systems.</p>
           </div>
           <div class="tile">
             <h3>Data & Automation</h3>
@@ -303,15 +227,15 @@
         <div class="list">
           <div class="item">
             <div class="badge" aria-hidden="true">🧭</div>
-            <div>
+            <div class="t">
               <strong>Architecture guidance</strong>
-              <span>Practical recommendations you can implement this sprint—not a 90-page deck nobody reads.</span>
+              <span>Practical recommendations you can implement quickly, with clean diagrams and decisions.</span>
             </div>
           </div>
 
           <div class="item">
             <div class="badge" aria-hidden="true">🧩</div>
-            <div>
+            <div class="t">
               <strong>Integration clarity</strong>
               <span>Better mappings, fewer surprises, and predictable behavior across environments.</span>
             </div>
@@ -319,7 +243,7 @@
 
           <div class="item">
             <div class="badge" aria-hidden="true">🛡️</div>
-            <div>
+            <div class="t">
               <strong>Security-minded delivery</strong>
               <span>Baseline hardening, least-privilege thinking, and “don’t make it easy to break.”</span>
             </div>
@@ -327,7 +251,7 @@
 
           <div class="item">
             <div class="badge" aria-hidden="true">📄</div>
-            <div>
+            <div class="t">
               <strong>Documentation that actually helps</strong>
               <span>Simple, usable notes for ops, devs, and leadership—so you’re not the only one who knows.</span>
             </div>
@@ -335,9 +259,13 @@
         </div>
 
         <div class="small" id="contact">
-          Contact: replace this text with your email/phone.
-          <br />
-          Example: <a href="mailto:hello@sheldonglobal.org">hello@sheldonglobal.org</a>
+          Contact:
+          <div style="margin-top:10px;display:grid;gap:6px;">
+            <div>Sean Sheldon</div>
+            <div><a href="mailto:sean@sheldonglobal.org">sean@sheldonglobal.org</a></div>
+            <div><a href="mailto:info@sheldonglobal.org">info@sheldonglobal.org</a></div>
+            <div><a href="tel:+12512790777">251-279-0777</a></div>
+          </div>
         </div>
       </aside>
     </section>
