Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <img class="logo-img" src="assets/logo.png" alt="Sheldon Global logo" />
+        <img class="logo-img" src="assets/sheldon_global_logo.png" alt="Sheldon Global logo" />
         <div>
           <h1>Sheldon Global</h1>
           <p>IT Consulting • Architecture • Integration</p>
