Rename image class from '-img' to 'logo-img'

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }
 
     .brand{display:flex;align-items:center;gap:12px;min-width:260px;}
-    .-img{
+    .logo-img{
       width:42px;height:42px;border-radius:12px;object-fit:cover;
       box-shadow:0 10px 30px rgba(0,0,0,.35);
       border:1px solid rgba(255,255,255,.16);
@@ -170,7 +170,7 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <img class="-img" src="assets/sheldon_global_.png" alt="Sheldon Global " />
+        <img class="logo-img" src="assets/sheldon_global_logo.png" alt="Sheldon Global logo" />
         <div>
           <h1>Sheldon Global</h1>
           <p>IT Consulting • Architecture • Integration</p>
