--- a/lab.html
+++ b/lab.html
@@ -1,9 +1,11 @@
+<!-- lab.html -->
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sheldon Global | Lab</title>
+
   <style>
     :root{
       --bg:#0b1220;
@@ -12,6 +14,7 @@
       --text:rgba(255,255,255,.92);
       --muted:rgba(255,255,255,.68);
       --accent:#ff6500;
+      --accent2:#5ce1d4;
       --shadow:0 20px 60px rgba(0,0,0,.35);
       --radius:18px;
       --max:900px;
@@ -30,24 +33,50 @@
     }
     a{color:inherit;text-decoration:none;}
     .wrap{max-width:var(--max);margin:0 auto;padding:26px 18px 60px;}
+
     header{
-      display:flex;align-items:center;justify-content:space-between;
-      gap:14px;padding:10px 6px 22px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:14px;
+      padding:10px 6px 22px;
     }
-    .brand{display:flex;align-items:center;gap:12px;}
+
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:14px;
+    }
+
+    /* WIDE LOGO FIX (1170x450) */
     .logo-img{
-      width:40px;height:40px;border-radius:12px;object-fit:cover;
-      box-shadow:0 10px 30px rgba(0,0,0,.35);
-      border:1px solid rgba(255,255,255,.16);
-      background:rgba(0,0,0,.18);
+      height:48px;
+      width:auto;
+      max-width:220px;
+      object-fit:contain;
+      filter: drop-shadow(0 10px 30px rgba(0,0,0,.45));
     }
-    .brand h1{font-size:16px;margin:0;letter-spacing:.5px;}
+    @media (min-width:768px){
+      .logo-img{
+        height:56px;
+        max-width:260px;
+      }
+    }
+
+    .brand h1{
+      font-size:17px;
+      margin:0;
+      letter-spacing:.5px;
+      line-height:1.1;
+    }
     .brand p{margin:0;font-size:12px;color:var(--muted);}
 
     nav{display:flex;gap:10px;flex-wrap:wrap;justify-content:flex-end;}
     nav a{
-      font-size:13px;color:var(--muted);
-      padding:8px 10px;border-radius:10px;
+      font-size:13px;
+      color:var(--muted);
+      padding:8px 10px;
+      border-radius:10px;
     }
     nav a:hover{color:var(--text);background:rgba(255,255,255,.06);}
 
@@ -59,18 +88,25 @@
       padding:22px;
       backdrop-filter:blur(10px);
     }
+
     h2{margin:0 0 8px;font-size:22px;}
     p{margin:0 0 14px;color:var(--muted);line-height:1.6;font-size:14px;}
 
     .btn{
-      display:inline-flex;align-items:center;justify-content:center;gap:10px;
-      padding:12px 14px;border-radius:12px;font-size:14px;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      gap:10px;
+      padding:12px 14px;
+      border-radius:12px;
+      font-size:14px;
       border:1px solid rgba(255,101,0,.45);
       background:linear-gradient(135deg, rgba(255,101,0,.95), rgba(255,101,0,.55));
       color:#000;
       cursor:pointer;
       user-select:none;
     }
+
     .note{
       margin-top:14px;
       font-size:12px;
@@ -78,6 +114,7 @@
       border-top:1px solid rgba(255,255,255,.10);
       padding-top:12px;
     }
+
     .mono{
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       font-size:12px;
