--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -39,44 +38,52 @@
 
     header{
       display:flex;
-      align-items:center;
+      align-items:flex-start;
       justify-content:space-between;
       gap:14px;
       padding:10px 6px 22px;
     }
 
+    /* brand becomes stacked (logo big + tagline below) */
     .brand{
       display:flex;
-      align-items:center;
-      gap:14px;
+      flex-direction:column;
+      align-items:flex-start;
+      gap:8px;
       min-width:260px;
     }
 
-    /* WIDE LOGO FIX (1170x450) */
     .logo-img{
-      height:48px;
+      height:64px;
       width:auto;
-      max-width:220px;
+      max-width:420px;
       object-fit:contain;
-      filter: drop-shadow(0 10px 30px rgba(0,0,0,.45));
+      filter: drop-shadow(0 14px 44px rgba(0,0,0,.50));
     }
-    @media (min-width:768px){
-      .logo-img{
-        height:56px;
-        max-width:260px;
-      }
+    .tagline{
+      color:var(--muted);
+      font-size:12px;
+      letter-spacing:.3px;
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px;
+      align-items:center;
+      margin-left:2px;
+    }
+    .tagline .pill{
+      border:1px solid rgba(255,255,255,.14);
+      background:rgba(0,0,0,.18);
+      padding:6px 10px;
+      border-radius:999px;
+      line-height:1;
+      font-size:12px;
     }
 
-    .brand h1{
-      font-size:17px;
-      margin:0;
-      letter-spacing:.5px;
-      line-height:1.1;
-    }
-    .brand p{
-      margin:0;
-      font-size:12px;
-      color:var(--muted);
+    @media (min-width:768px){
+      .logo-img{
+        height:84px;
+        max-width:520px;
+      }
     }
 
     nav{
@@ -85,6 +92,7 @@
       gap:10px;
       flex-wrap:wrap;
       justify-content:flex-end;
+      padding-top:10px;
     }
     nav a{
       font-size:13px;
@@ -123,9 +131,7 @@
       background:rgba(0,0,0,.15);
     }
     .dot{
-      width:8px;
-      height:8px;
-      border-radius:999px;
+      width:8px;height:8px;border-radius:999px;
       background:var(--accent2);
       box-shadow:0 0 0 4px rgba(92,225,212,.15);
     }
@@ -194,15 +200,11 @@
       background:rgba(0,0,0,.12);
     }
     .badge{
-      width:34px;
-      height:34px;
-      border-radius:12px;
-      display:grid;
-      place-items:center;
+      width:34px;height:34px;border-radius:12px;
+      display:grid;place-items:center;
       background:rgba(92,225,212,.14);
       border:1px solid rgba(92,225,212,.24);
-      flex:0 0 auto;
-      font-size:16px;
+      flex:0 0 auto;font-size:16px;
     }
     .item .t strong{display:block;font-size:13px;margin-bottom:2px;}
     .item .t span{display:block;color:var(--muted);font-size:12px;line-height:1.45;}
@@ -231,6 +233,7 @@
       .grid{grid-template-columns:1fr;}
       .hero h2{font-size:30px;}
       .brand{min-width:0;}
+      nav{padding-top:6px;}
     }
   </style>
 </head>
@@ -240,9 +243,10 @@
     <header>
       <div class="brand">
         <img class="logo-img" src="assets/sheldon_global_logo.png" alt="Sheldon Global logo" />
-        <div>
-          <h1>Sheldon Global</h1>
-          <p>IT Consulting • Architecture • Integration</p>
+        <div class="tagline" aria-label="Tagline">
+          <span class="pill">IT Consulting</span>
+          <span class="pill">Architecture</span>
+          <span class="pill">Integration</span>
         </div>
       </div>
 
@@ -341,7 +345,7 @@
 
     <footer>
       <div>© <span id="y"></span> Sheldon Global</div>
-      <div>IT Consulting Business</div>
+      <div>Healthcare IT • Integration • Interoperability • Data</div>
     </footer>
   </div>
 
