--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Sheldon Global — IT Consulting. Architecture, integration, data, and automation." />
+  <meta name="description" content="Sheldon Global — IT Consulting. Architecture, integration, healthcare IT, and interoperability." />
   <title>Sheldon Global | IT Consulting</title>
 
   <style>
@@ -36,72 +36,77 @@
     a{color:inherit;text-decoration:none;}
     .wrap{max-width:var(--max);margin:0 auto;padding:26px 18px 80px;}
 
-    header{
+    /* ===== BRAND HEADER (BIG LOGO) ===== */
+    .site-header{
       display:flex;
-      align-items:flex-start;
       justify-content:space-between;
-      gap:14px;
-      padding:10px 6px 22px;
+      align-items:flex-start;
+      padding:30px 6px 40px;
+      gap:20px;
     }
-
-    /* brand becomes stacked (logo big + tagline below) */
-    .brand{
+    .brand-block{
       display:flex;
       flex-direction:column;
       align-items:flex-start;
-      gap:8px;
+      gap:16px;
       min-width:260px;
     }
-
-    .logo-img{
-      height:64px;
+    .logo-hero{
+      height:120px;            /* BIG */
       width:auto;
-      max-width:420px;
+      max-width:680px;
       object-fit:contain;
-      filter: drop-shadow(0 14px 44px rgba(0,0,0,.50));
+      filter: drop-shadow(0 20px 60px rgba(0,0,0,.55));
     }
-    .tagline{
-      color:var(--muted);
-      font-size:12px;
-      letter-spacing:.3px;
+    .tagline-row{
       display:flex;
+      gap:12px;
       flex-wrap:wrap;
-      gap:10px;
-      align-items:center;
       margin-left:2px;
     }
-    .tagline .pill{
-      border:1px solid rgba(255,255,255,.14);
-      background:rgba(0,0,0,.18);
-      padding:6px 10px;
+    .pill{
+      border:1px solid rgba(255,255,255,.18);
+      background:rgba(0,0,0,.25);
+      padding:8px 14px;
       border-radius:999px;
+      font-size:13px;
+      color:var(--muted);
+      letter-spacing:.3px;
       line-height:1;
-      font-size:12px;
     }
 
-    @media (min-width:768px){
-      .logo-img{
-        height:84px;
-        max-width:520px;
-      }
-    }
-
-    nav{
+    .top-nav{
       display:flex;
-      align-items:center;
-      gap:10px;
+      gap:14px;
       flex-wrap:wrap;
       justify-content:flex-end;
-      padding-top:10px;
+      padding-top:12px;
     }
-    nav a{
+    .top-nav a{
       font-size:13px;
       color:var(--muted);
       padding:8px 10px;
       border-radius:10px;
     }
-    nav a:hover{color:var(--text);background:rgba(255,255,255,.06);}
+    .top-nav a:hover{
+      color:var(--text);
+      background:rgba(255,255,255,.06);
+    }
 
+    @media (max-width:900px){
+      .site-header{
+        flex-direction:column;
+        align-items:flex-start;
+        padding:22px 6px 24px;
+      }
+      .logo-hero{
+        height:96px;
+        max-width:100%;
+      }
+      .top-nav{padding-top:4px;}
+    }
+
+    /* ===== MAIN LAYOUT ===== */
     .hero{
       display:grid;
       grid-template-columns:1.15fr .85fr;
@@ -109,7 +114,6 @@
       align-items:stretch;
       margin-top:6px;
     }
-
     .panel{
       background:var(--card);
       border:1px solid var(--border);
@@ -232,25 +236,24 @@
       .hero{grid-template-columns:1fr;}
       .grid{grid-template-columns:1fr;}
       .hero h2{font-size:30px;}
-      .brand{min-width:0;}
-      nav{padding-top:6px;}
     }
   </style>
 </head>
 
 <body>
   <div class="wrap">
-    <header>
-      <div class="brand">
-        <img class="logo-img" src="assets/sheldon_global_logo.png" alt="Sheldon Global logo" />
-        <div class="tagline" aria-label="Tagline">
+
+    <header class="site-header">
+      <div class="brand-block">
+        <img class="logo-hero" src="assets/sheldon_global_logo.png" alt="Sheldon Global logo" />
+        <div class="tagline-row">
           <span class="pill">IT Consulting</span>
           <span class="pill">Architecture</span>
           <span class="pill">Integration</span>
         </div>
       </div>
 
-      <nav>
+      <nav class="top-nav">
         <a href="#services">Services</a>
         <a href="#approach">Approach</a>
         <a href="lab.html">Lab</a>
