--- a/index.html
+++ b/index.html
@@ -36,29 +36,37 @@
     a{color:inherit;text-decoration:none;}
     .wrap{max-width:var(--max);margin:0 auto;padding:26px 18px 80px;}
 
-    /* ===== BRAND HEADER (TIGHTER + BALANCED) ===== */
+    /* ===== HEADER (NO DEAD ZONE) ===== */
     .site-header{
       display:grid;
       grid-template-columns:auto 1fr;
-      align-items:start;
+      grid-template-rows:auto auto;
       column-gap:28px;
-      padding:30px 6px 34px;
+
+      /* key: reduce header “band” */
+      padding:26px 6px 14px;
     }
 
     .brand-block{
+      grid-column:1;
+      grid-row:1 / span 2;
+
       display:flex;
       flex-direction:column;
       align-items:flex-start;
-      gap:10px;                 /* tighter than before */
+
+      /* key: tighten logo->pills */
+      gap:10px;
+
       min-width:260px;
     }
 
     .logo-hero{
-      height:204px;             /* 15% smaller than 240px */
+      height:204px; /* 15% smaller than 240px */
       width:auto;
       max-width:1360px;
       object-fit:contain;
-      display:block;            /* removes any inline image baseline spacing quirks */
+      display:block;
       filter: drop-shadow(0 20px 60px rgba(0,0,0,.55));
     }
 
@@ -67,7 +75,9 @@
       gap:12px;
       flex-wrap:wrap;
       margin-left:2px;
-      margin-top:-4px;          /* pulls pills closer to logo */
+
+      /* key: close tiny gap */
+      margin-top:-4px;
     }
 
     .pill{
@@ -81,13 +91,23 @@
       line-height:1;
     }
 
+    /* Nav sits on row 2 aligned with pills (not floating at the top) */
     .top-nav{
+      grid-column:2;
+      grid-row:2;
+
       display:flex;
       gap:14px;
       flex-wrap:wrap;
       justify-content:flex-end;
-      align-self:flex-start;
-      padding-top:8px;          /* aligns better with logo */
+      align-items:center;
+
+      /* key: pulls nav down to match pills baseline */
+      align-self:end;
+
+      /* no extra padding creating empty area */
+      padding:0;
+      margin:0;
     }
     .top-nav a{
       font-size:13px;
@@ -103,14 +123,26 @@
     @media (max-width:900px){
       .site-header{
         grid-template-columns:1fr;
+        grid-template-rows:auto auto;
         row-gap:12px;
-        padding:22px 6px 20px;
+        padding:22px 6px 12px;
       }
+
+      .brand-block{
+        grid-column:1;
+        grid-row:1;
+      }
+
+      .top-nav{
+        grid-column:1;
+        grid-row:2;
+        justify-content:flex-start;
+      }
+
       .logo-hero{
-        height:164px;           /* scaled down from 192px by ~15% */
+        height:164px; /* ~15% smaller than prior 192 */
         max-width:100%;
       }
-      .top-nav{padding-top:0;}
     }
 
     /* ===== MAIN LAYOUT ===== */
@@ -119,7 +151,9 @@
       grid-template-columns:1.15fr .85fr;
       gap:18px;
       align-items:stretch;
-      margin-top:6px;
+
+      /* key: pull cards upward to eliminate “header band” feel */
+      margin-top:0;
     }
     .panel{
       background:var(--card);
